--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,30 @@
+annotated-types==0.6.0
+anyio==4.3.0
 beautifulsoup4==4.12.3
 bs4==0.0.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
-et-xmlfile==1.1.0
+click==8.1.7
+colorama==0.4.6
+fastapi==0.109.2
+fastapi-utils==0.2.1
+greenlet==3.0.3
+h11==0.14.0
 idna==3.6
 numpy==1.26.4
-openpyxl==3.1.2
 pandas==2.2.0
 pyarrow==15.0.0
+pydantic==1.10.14
+pydantic_core==2.16.2
 python-dateutil==2.8.2
 pytz==2024.1
 requests==2.31.0
 six==1.16.0
+sniffio==1.3.0
 soupsieve==2.5
+SQLAlchemy==1.4.51
+starlette==0.36.3
+typing_extensions==4.9.0
 tzdata==2024.1
 urllib3==2.2.0
+uvicorn==0.27.1
