--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+et-xmlfile==1.1.0
 fastapi==0.109.2
 fastapi-utils==0.2.1
 greenlet==3.0.3
 h11==0.14.0
 idna==3.6
 numpy==1.26.4
+openpyxl==3.1.2
 pandas==2.2.0
 pyarrow==15.0.0
 pydantic==1.10.14
