--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ fastapi-utils==0.2.1
 greenlet==3.0.3
 h11==0.14.0
 idna==3.6
+mysql-connector-python==8.3.0
 numpy==1.26.4
 openpyxl==3.1.2
 pandas==2.2.0
@@ -19,6 +20,7 @@ pyarrow==15.0.0
 pydantic==1.10.14
 pydantic_core==2.16.2
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 pytz==2024.1
 requests==2.31.0
 six==1.16.0
