--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,16 @@ colorama==0.4.6
 et-xmlfile==1.1.0
 fastapi==0.109.2
 fastapi-utils==0.2.1
+filelock==3.13.1
+fsspec==2024.3.1
 greenlet==3.0.3
 h11==0.14.0
 idna==3.6
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+mpmath==1.3.0
 mysql-connector-python==8.3.0
+networkx==3.2.1
 numpy==1.26.4
 openpyxl==3.1.2
 pandas==2.2.0
@@ -28,6 +34,8 @@ sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==1.4.51
 starlette==0.36.3
+sympy==1.12
+torch==2.2.1
 typing_extensions==4.9.0
 tzdata==2024.1
 urllib3==2.2.0
