--- a/requirements.txt
+++ b/requirements.txt
@@ -6,26 +6,50 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+contourpy==1.2.0
+cycler==0.12.1
 et-xmlfile==1.1.0
 fastapi==0.109.2
 fastapi-utils==0.2.1
+filelock==3.13.1
+fonttools==4.50.0
+fsspec==2024.3.1
 greenlet==3.0.3
 h11==0.14.0
+holidays==0.45
 idna==3.6
+Jinja2==3.1.3
+joblib==1.3.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+matplotlib==3.8.3
+mpmath==1.3.0
+mysql-connector-python==8.3.0
+networkx==3.2.1
 numpy==1.26.4
 openpyxl==3.1.2
+overrides==7.7.0
+packaging==24.0
 pandas==2.2.0
+pillow==10.2.0
 pyarrow==15.0.0
 pydantic==1.10.14
 pydantic_core==2.16.2
+pyparsing==3.1.2
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 pytz==2024.1
 requests==2.31.0
+scikit-learn==1.4.1.post1
+scipy==1.12.0
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==1.4.51
 starlette==0.36.3
+sympy==1.12
+threadpoolctl==3.4.0
+torch==2.2.1
 typing_extensions==4.9.0
 tzdata==2024.1
 urllib3==2.2.0
