--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.1.7
 colorama==0.4.6
 contourpy==1.2.0
 cycler==0.12.1
+Deprecated==1.2.14
 et-xmlfile==1.1.0
 fastapi==0.109.2
 fastapi-utils==0.2.1
@@ -18,9 +19,11 @@ greenlet==3.0.3
 h11==0.14.0
 holidays==0.45
 idna==3.6
+importlib_resources==6.4.0
 Jinja2==3.1.3
 joblib==1.3.2
 kiwisolver==1.4.5
+limits==3.10.1
 MarkupSafe==2.1.5
 matplotlib==3.8.3
 mpmath==1.3.0
@@ -43,6 +46,7 @@ requests==2.31.0
 scikit-learn==1.4.1.post1
 scipy==1.12.0
 six==1.16.0
+slowapi==0.1.9
 sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==1.4.51
@@ -54,3 +58,4 @@ typing_extensions==4.9.0
 tzdata==2024.1
 urllib3==2.2.0
 uvicorn==0.27.1
+wrapt==1.16.0
