--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ fsspec==2024.3.1
 greenlet==3.0.3
 h11==0.14.0
 holidays==0.45
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.6
 importlib_resources==6.4.0
 Jinja2==3.1.3
